--- a/package.json
+++ b/package.json
@@ -8,15 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-switch": "^1.0.3",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
