--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.0",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-switch": "^1.0.3",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3"
   }
 }
