--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@cloudinary/react": "^1.13.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.0",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -17,8 +18,10 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "cloudinary": "^2.1.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "formidable-serverless": "^1.1.1",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
@@ -26,6 +29,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prisma": "^5.12.1",
