--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "cloudinary": "^2.1.0",
+    "dotenv": "^16.4.5",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "formidable-serverless": "^1.1.1",
